2012-11-21  Tony Chang  <tony@chromium.org>

        Relayout the slider track when a data list is set
        https://bugs.webkit.org/show_bug.cgi?id=102851

        Reviewed by Ojan Vafai.

        Previously, we would relayout the <input>.  Once we fix bug 102352, this
        causes the slider track to not relayout.  It should relayout because it
        draws the data list tick marks and needs to provide space for them.

        No new tests, not testable until bug 102352 is fixed. Specifically,
        fast/forms/datalist/update-range-with-datalist.html reveals the bug.

        * html/RangeInputType.cpp:
        (WebCore::RangeInputType::listAttributeTargetChanged):

2012-11-21  Kevin Ellis  <kevers@chromium.org>

        [chromium] Add flag to enable/disable touch adjustment at runtime.
        https://bugs.webkit.org/show_bug.cgi?id=102534

        Reviewed by Antonio Gomes.

        Add setting for enabling or disabling touch adjustment.  Note that for
        touch adjustment to apply, the compile flag must also be enabled.  A
        compile only option is insufficient as it does not allow developers to
        quickly test the impact of touch adjustemnt without recompiling.  Nor
        does it allow end users to disable touch adjustemnt if they find that
        touch adjustment is not working well for a particular site.

        No new tests required.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleGestureEvent): Move enable check to adjustGesturePosition.
        (WebCore::EventHandler::handleGestureTap): Move enable check to adjustGesturePosition.
        (WebCore::EventHandler::shouldApplyTouchAdjustment): Checks if touch adjustment is enabled.
        (WebCore):
        (WebCore::EventHandler::adjustGesturePosition): Add check for enabling of touch adjustment.
        (WebCore::EventHandler::sendContextMenuEventForGesture): Move enable check to adjustGesturePosition.
        * page/EventHandler.h:
        (EventHandler):